correct link used for css
Messed up on the link earlier

--- a/labs/lab 2/css/screen.css
+++ b/labs/lab 2/css/screen.css
@@ -394,10 +394,11 @@ Joshua Linus
 My Personal Code
  */
 
-body{
-	background-color: aqua
+body {
+	background-color: aqua;
+	
 }
 
-h1{
+h1 {
 		
 }
